# Sales-Data-Analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  superstore dashboard.pbix
.github/workflows/: ci.yml
src/sales_analysis/: __init__.py  analysis.py  cleaning.py  cli.py  config.py  data_loader.py  kpis.py  pipeline.py  visualization.py
tests/: test_pipeline.py
