[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-analysis"
version = "1.0.0"
description = "Reproducible analytics toolkit for the Global Superstore sales dataset"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SonuDeo" }]
keywords = ["sales", "analytics", "eda", "rfm", "data-analysis", "pandas"]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4", "black>=24.0"]

[project.scripts]
sales-analysis = "sales_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py310"]
